--- a/netlify.toml
+++ b/netlify.toml
@@ -18,7 +18,7 @@
 
 [functions]
   node_bundler = "esbuild"
-  external_node_modules = ["express", "serverless-http"]
+  external_node_modules = ["express", "serverless-http", "@neondatabase/serverless", "@sendgrid/mail", "drizzle-orm"]
 
 [[headers]]
   for = "/*"
